@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.33 2007/09/07 22:12:17 jlam Exp $
+# $NetBSD: Makefile,v 1.34 2009/01/12 22:25:23 hubertf Exp $
 #
 
-DISTNAME=	ipv6calc-0.61.0
+DISTNAME=	ipv6calc-0.72.1
 CATEGORIES=	net
-MASTER_SITES=	ftp://ftp.bieringer.de/pub/linux/IPv6/ipv6calc/
+MASTER_SITES=	ftp://ftp.bieringer.de/pub/linux/IPv6/ipv6calc/ \
+		ftp://sunsite.icm.edu.pl/pub/Linux/ipv6/bipv6/ipv6calc/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.deepspace6.net/projects/ipv6calc.html
@@ -17,6 +18,6 @@ BUILD_DEFS+=	IPV6_READY
 GNU_CONFIGURE=	YES
 USE_TOOLS+=	gmake
 
-INSTALL_TARGET=	installonly
+INSTALL_TARGET=	install
 
 .include "../../mk/bsd.pkg.mk"
