@@ -1,7 +1,9 @@
-@comment $NetBSD: PLIST,v 1.4 2004/11/23 21:32:11 hubertf Exp $
+@comment $NetBSD: PLIST,v 1.5 2009/01/12 22:25:23 hubertf Exp $
 bin/ipv6calc
+bin/ipv6loganon
 bin/ipv6logconv
 bin/ipv6logstats
 man/man8/ipv6calc.8
+man/man8/ipv6loganon.8
 man/man8/ipv6logconv.8
 man/man8/ipv6logstats.8
